scaffold/typescript-go-main/testdata/baselines/reference/compiler/invalidJsdocType.errors.txt
a.js(1,12): error TS1110: Type expected.


==== a.js (1 errors) ====
    /** @type {@import("a").Type} */
               ~
!!! error TS1110: Type expected.
    let x;